# igcclib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  igcclib-config.cmake
cmake/: FindZSTD.cmake  component-config.cmake  component-helpers.cmake  config-component.cmake.in  config-root.cmake.in  igcclib-component-helpers.cmake  igcclib-config.cmake.in  igcclib-dependency.cmake  igcclib-utils.cmake
data/: readme.md
examples/: CMakeLists.txt  mesh_viewer_example.h  multi_source_shortest_path.h
examples/include/: example_common.hpp  example_image_ops.hpp
examples/src/: imgproc_resize_image.cpp
include/: igcclib_master.hpp
include/geometry/: igcclib_cgal.hpp
include/igcclib/: igcclib_api.h  igcclib_master.hpp
include/igcclib/compression/: compression.hpp
include/igcclib/core/: KDTreeSearcher.hpp  igcclib_common.hpp  igcclib_eigen.hpp  igcclib_eigen_def.hpp  igcclib_logging.hpp  util_logging.h
include/igcclib/crypto/: AES_ECB_Cipher.hpp  RSA_Cipher.hpp  igcclib_crypto_def.hpp  igcclib_openssl.hpp
include/igcclib/device/: DefaultFrameReader.hpp  DeviceReader.hpp  FrameData.hpp  FrameReader.hpp  FrameRecorder.hpp  GyroAccelSensor.hpp  igcclib_device_def.hpp
include/igcclib/device/azure_kinect/: AzureKinectFrameReader.hpp  AzureKinectReader.hpp  igcclib_device_azure_kinect.hpp
include/igcclib/device/kinect_v2/: KinectReader.hpp
include/igcclib/device/openni_std/: OpenniStdDevice.hpp
include/igcclib/geometry/: BSplineCurve.hpp  MeshPropertyReader.h  MeshSearcher.hpp  MeshVoxelization.hpp  SpatialQuery_2.hpp  TriangularMesh.hpp  igcclib_cgal.hpp  igcclib_cgal_def.hpp  igcclib_cgal_eigen.hpp  igcclib_geometry.hpp  igcclib_mesh_helpers.hpp  igcclib_obj_eigen.hpp
include/igcclib/graph/: GeometricGraph.hpp  UndirectedGraph.hpp  igcclib_graph_algorithms.hpp  igcclib_graph_converters.hpp  igcclib_graph_def.hpp
include/igcclib/io/: igcclib_io_compression.hpp  igcclib_io_fbx.hpp  igcclib_io_filesys.hpp  igcclib_io_flatbuffer.hpp  igcclib_io_general.hpp  igcclib_io_json_eigen.hpp  igcclib_io_msgpk_Eigen.hpp  igcclib_io_msgpk_Master.hpp  igcclib_io_msgpk_TriangularMesh.hpp  igcclib_io_numpy.hpp  igcclib_io_numpy_opencv.hpp  igcclib_io_triangular_mesh.hpp  io_numpy_opencv.hpp  io_triangular_mesh.hpp  json_eigen.hpp  msgpk_Eigen.hpp  msgpk_Master.hpp  msgpk_TriangularMesh.hpp
include/igcclib/math/: interp_nd.hpp  sparse.hpp  statistics.hpp
include/igcclib/python/: igcclib_boost_python.hpp  igcclib_cgal_python.hpp  igcclib_eigen_python.hpp  igcclib_pybind11.hpp
include/igcclib/python_boostpy/: igcclib_py_boost.hpp  igcclib_py_cgal.hpp  igcclib_py_eigen.hpp
include/igcclib/python_pybind11/: igcclib_py_pybind11.hpp
include/igcclib/vision/: CalibrationInfo_OpenCV.hpp  CameraModel.hpp  ImageData.hpp  VideoReader.hpp  igcclib_image_processing.hpp  igcclib_image_viewer.hpp  igcclib_opencv.hpp  igcclib_opencv_def.hpp  igcclib_opencv_eigen.hpp
include/igcclib/visualization/magnum/: CameraBase.hpp  FPSCameraController.h  FPSCameraController.hpp  MagnumRenderer.hpp  MeshNode.h  MeshNode.hpp  OrthographicCamera.hpp  PerspectiveCamera.h  PerspectiveCamera.hpp  SceneNode.hpp  WASDInputControllerForGLFW.hpp  igcclib_magnum.hpp  igcclib_magnum_def.hpp  igcclib_magnum_eigen.hpp  mesh_viewer.h  mesh_viewer.hpp  util_magnum.h  util_magnum_eigen.h
include/igcclib/visualization/soft_renderer/: SoftMeshViewer.hpp  igcclib_softlit.hpp  igcclib_softlit_helpers.hpp
include/igcclib/visualization/soft_renderer/softlit/: AnalysisShader.h  Display.h  Master.h  Primitive.h  Rasterizer.h  RasterizerConfig.h  Shaders.h  Texture.h
log/: latest_list
src/: CMakeLists.txt  util_cgal.cpp
src/compression/: CMakeLists.txt  compression.cpp
src/core/: CMakeLists.txt
src/crypto/: AES_ECB_Cipher.cpp  CMakeLists.txt  RSA_Cipher.cpp
src/device/: CMakeLists.txt  DefaultFrameReader.cpp  FrameRecorder.cpp  FrameRecorder_v1.cpp  GyroAccelSensor.cpp
src/device/azure_kinect/: AzureKinectFrameReader.cpp  AzureKinectReader.cpp  def_azure_kinect.cpp  igcclib_device_azure_kinect.cpp
src/device/kinect_v2/: KinectReader.cpp
src/device/openni_std/: OpenniStdDevice.cpp
src/geometry/: CMakeLists.txt  MeshSearcher.cpp  SpatialQuery_2.cpp  igcclib_cgal.cpp
src/graph/: CMakeLists.txt
src/io/: CMakeLists.txt  igcclib_io_compression.cpp  io_compression.cpp  io_fbx.cpp
src/math/: CMakeLists.txt
src/python_boostpy/: CMakeLists.txt
src/python_pybind11/: CMakeLists.txt
src/vision/: CMakeLists.txt  CameraModel.cpp  VideoReader.cpp  igcclib_image_processing.cpp  igcclib_opencv.cpp
src/visualization/: CMakeLists.txt
src/visualization/soft_renderer/: softlit.cpp
src/visualization/soft_renderer/softlit/: AnalysisShader.cpp  Display.cpp  Primitive.cpp  Rasterizer.cpp  Texture.cpp  _softlit_example.cpp
test/: CMakeLists.txt  test-core.cpp  test-vision.cpp  utest-vision.cpp
tests/: CMakeLists.txt  utest-core.cpp  utest-vision.cpp
