add_subdirectory(core)
add_subdirectory(extern)
add_subdirectory(geometry)
add_subdirectory(compression)
add_subdirectory(crypto)
add_subdirectory(io)
add_subdirectory(vision)
add_subdirectory(visualization)
add_subdirectory(graph)
add_subdirectory(math)
add_subdirectory(python_boostpy)
add_subdirectory(python_pybind11)